Remove test script

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "electron_timer_app",
+  "productName": "Electron Timer App",
   "version": "1.0.0",
   "description": "Electron app that pushes a desktop notification when the time is up",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
     "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
     "package-win": "electron-packager . electron_timer_app --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Electron Timer App\"",
